--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 Tasks/Tasks.xcodeproj/project.xcworkspace/xcuserdata/sweintern.xcuserdatad/UserInterfaceState.xcuserstate
 Tasks/.DS_Store
+.DS_Store
