--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 Tasks/Tasks.xcodeproj/project.xcworkspace/xcuserdata/sweintern.xcuserdatad/UserInterfaceState.xcuserstate
 Tasks/.DS_Store
 .DS_Store
+Tasks/Tasks.xcodeproj/project.xcworkspace/xcuserdata/sweintern.xcuserdatad/UserInterfaceState.xcuserstate
