--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Tasks/Tasks.xcodeproj/project.xcworkspace/xcuserdata/sweintern.xcuserdatad/UserI
 Tasks/.DS_Store
 .DS_Store
 Tasks/Tasks.xcodeproj/project.xcworkspace/xcuserdata/sweintern.xcuserdatad/UserInterfaceState.xcuserstate
+Tasks/Tasks.xcodeproj/project.xcworkspace/xcuserdata/sweintern.xcuserdatad/UserInterfaceState.xcuserstate
