Fixed Add to Siri button
- Added a new intent to handle requests in Arabic

--- a/Tasks/Tasks/Info.plist
+++ b/Tasks/Tasks/Info.plist
@@ -4,6 +4,7 @@
 <dict>
 	<key>NSUserActivityTypes</key>
 	<array>
+		<string>TaskTrackerArabicIntent</string>
 		<string>TaskTrackerIntent</string>
 	</array>
 	<key>UIApplicationSceneManifest</key>
