Added a new intent with dual parameters
NOTE: Dual parameter intent replaced old parameter with single parameter in ViewController's English "Add to Siri" button

--- a/Tasks/Tasks/Info.plist
+++ b/Tasks/Tasks/Info.plist
@@ -6,6 +6,7 @@
 	<array>
 		<string>TaskTrackerArabicIntent</string>
 		<string>TaskTrackerIntent</string>
+		<string>TaskTrackerWithIdIntent</string>
 	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
