--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ Tasks/.DS_Store
 .DS_Store
 Tasks/Tasks.xcodeproj/project.xcworkspace/xcuserdata/sweintern.xcuserdatad/UserInterfaceState.xcuserstate
 Tasks/Tasks.xcodeproj/project.xcworkspace/xcuserdata/sweintern.xcuserdatad/UserInterfaceState.xcuserstate
+Tasks/Tasks.xcodeproj/project.xcworkspace/xcuserdata/sweintern.xcuserdatad/UserInterfaceState.xcuserstate
+Tasks/Tasks.xcodeproj/xcuserdata/sweintern.xcuserdatad/xcschemes/xcschememanagement.plist
