--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ Tasks/Tasks.xcodeproj/project.xcworkspace/xcuserdata/sweintern.xcuserdatad/UserI
 Tasks/Tasks.xcodeproj/project.xcworkspace/xcuserdata/sweintern.xcuserdatad/UserInterfaceState.xcuserstate
 Tasks/Tasks.xcodeproj/project.xcworkspace/xcuserdata/sweintern.xcuserdatad/UserInterfaceState.xcuserstate
 Tasks/Tasks.xcodeproj/xcuserdata/sweintern.xcuserdatad/xcschemes/xcschememanagement.plist
+Tasks/Tasks.xcodeproj/project.xcworkspace/xcuserdata/mohamedghoul.xcuserdatad/UserInterfaceState.xcuserstate
